Closed
Bug 354025
Opened 18 years ago
Closed 18 years ago
Crashes during shutdown [@ morkRowObject::CloseRowObject]
Categories
(Core Graveyard :: History: Global, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mcsmurf, Assigned: neil)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
3.34 KB,
text/plain
|
Details | |
551 bytes,
patch
|
jag+mozilla
:
review+
jag+mozilla
:
superreview+
|
Details | Diff | Splinter Review |
In current SeaMonkey trunk builds I see SeaMonkey crashing during shutdown. I don't know yet how to reproduce this bug, but it can be reproduced with a new profile more or less quickly (surf around a bit, use history(?) and quit).
This bug here looks similar to Bug 346933, but it's probably not the same since SeaMonkey does not use toolkit/ autocomplete, the stack looks different and I do not remember seeing such crashes in nightlies from August.
morkRowObject::CloseRowObject also appears in the topcrasher list of SeaMonkey trunk on Rank 4. The first Talkback incidents there are from builds with the id 2006091810.
Reporter | ||
Comment 1•18 years ago
|
||
Reporter | ||
Comment 2•18 years ago
|
||
Bug 341504 looks suspicious...
Assignee | ||
Comment 3•18 years ago
|
||
I guess I needed to clear the autocomplete state before closing the database.
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #239883 -
Flags: superreview?(jag)
Attachment #239883 -
Flags: review?(jag)
Reporter | ||
Updated•18 years ago
|
Component: General → History: Global
QA Contact: general → history.global
Updated•18 years ago
|
Attachment #239883 -
Flags: superreview?(jag)
Attachment #239883 -
Flags: superreview+
Attachment #239883 -
Flags: review?(jag)
Attachment #239883 -
Flags: review+
Assignee | ||
Comment 4•18 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Crash Signature: [@ morkRowObject::CloseRowObject]
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•