Clear autocomplete cache before closing history db b=354025 r+sr=jag